Fix size on iphone

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,3 +24,9 @@
     display: flex;
     justify-content: center;
 }
+
+@media only screen and (max-width: 576px) {
+    h1 {
+        font-size: 1em;
+    }  
+}
